<resources>
    <string name="app_name">milya-music</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="download_button">Download</string>
    <string name="status_idle">Status: Idle</string>
    <string name="status_queued">Status: Queued…</string>
    <string name="status_running">Status: Downloading &amp; Converting…</string>
    <string name="status_success">Status: Success! Track Saved.</string>
    <string name="status_failed">Status: Extraction Failed</string>
    <string name="error_empty_url">Please enter a valid URL</string>

    <string name="status_format">No download yet.</string>
    <string name="download_input_placeholder">https://youtube.com/?v=somevideo</string>
    <string name="download_hint">Enter a url from any source that directly links to an audio file.</string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_audio">Play Audio</string>
    <string name="download_audio">Download Audio</string>
</resources>